@@ -1,12 +1,11 @@
-@echo off
+@ECHO OFF
 
-SETLOCAL
+SETLOCAL EnableDelayedExpansion
 
 if NOT DEFINED JAVA_HOME goto err
 
 set SCRIPT_DIR=%~dp0
 for %%I in ("%SCRIPT_DIR%..") do set CRATE_HOME=%%~dpfI
-
 
 REM ***** JAVA options *****
 
@@ -39,38 +38,79 @@ REM Enable aggressive optimizations in the JVM
 REM    - Disabled by default as it might cause the JVM to crash
 REM set JAVA_OPTS=%JAVA_OPTS% -XX:+AggressiveOpts
 
-set JAVA_OPTS=%JAVA_OPTS% -XX:+UseParNewGC
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseConcMarkSweepGC
 
 set JAVA_OPTS=%JAVA_OPTS% -XX:CMSInitiatingOccupancyFraction=75
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseCMSInitiatingOccupancyOnly
 
-REM When running under Java 7
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+UseCondCardMark
+REM GC logging default values
+SET GC_LOG_DIR=%CRATE_HOME%\logs
+SET GC_LOG_SIZE=64m
+SET GC_LOG_FILES=16
 
-REM GC logging options -- uncomment to enable
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+PrintGCDetails
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+PrintGCTimeStamps
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+PrintClassHistogram
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+PrintTenuringDistribution
-REM JAVA_OPTS=%JAVA_OPTS% -XX:+PrintGCApplicationStoppedTime
-REM JAVA_OPTS=%JAVA_OPTS% -Xloggc:/var/log/crate/gc.log
+REM Set CRATE_DISABLE_GC_LOGGING=1 to disable GC logging
+if NOT DEFINED "%CRATE_DISABLE_GC_LOGGING%" (
+
+  REM GC logging requires 16x64mb = 1g of free disk space
+  IF DEFINED %CRATE_GC_LOG_DIR% (SET GC_LOG_DIR=!CRATE_GC_LOG_DIR!)
+  IF DEFINED %CRATE_GC_LOG_SIZE% (SET GC_LOG_SIZE=!CRATE_GC_LOG_SIZE!)
+  IF DEFINED %CRATE_GC_LOG_FILES% (SET GC_LOG_FILES=!CRATE_GC_LOG_FILES!)
+
+  SET LOGGC=!GC_LOG_DIR!\gc.log
+
+  SET JAVA_OPTS=!JAVA_OPTS! -Xlog:gc*,gc+age=trace,safepoint:file=\"!LOGGC!\":utctime,pid,tags:filecount=!GC_LOG_FILES!,filesize=!GC_LOG_SIZE!
+)
+
+REM Disables explicit GC
+set JAVA_OPTS=%JAVA_OPTS% -XX:+DisableExplicitGC
+
+REM Use our provided JNA always versus the system one
+set JAVA_OPTS=%JAVA_OPTS% -Djna.nosys=true
 
 REM Ensure UTF-8 encoding by default (e.g. filenames)
 set JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding=UTF-8
 
+REM log4j options
+set JAVA_OPTS=%JAVA_OPTS% -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Dlog4j.skipJansi=true
+
+REM Disable netty recycler
+set JAVA_OPTS=%JAVA_OPTS% -Dio.netty.recycler.maxCapacityPerThread=0
+
+REM Dump heap on OOM
+set JAVA_OPTS=%JAVA_OPTS% -XX:+HeapDumpOnOutOfMemoryError
+if NOT "%CRATE_HEAP_DUMP_PATH%" == "" (
+    set JAVA_OPTS=%JAVA_OPTS% -XX:HeapDumpPath=%CRATE_HEAP_DUMP_PATH%
+)
+
 if "%CRATE_CLASSPATH%" == "" (
-    set CRATE_CLASSPATH=%CRATE_HOME%/lib/crate-app-@version@.jar;%CRATE_HOME%/lib/*;%CRATE_HOME%/plugins/sigar/lib/*
+    set CRATE_CLASSPATH=%CRATE_HOME%/lib/*
 ) else (
     ECHO Error: Don't modify the classpath with CRATE_CLASSPATH. 1>&2
     ECHO Add plugins and their dependencies into the plugins/ folder instead. 1>&2
     EXIT /B 1
 )
-set CRATE_PARAMS=-Dcrate -Des.path.home="%CRATE_HOME%"
+set CRATE_PARAMS=-Cpath.home="%CRATE_HOME%"
 
-"%JAVA_HOME%\bin\java" %JAVA_OPTS% %CRATE_JAVA_OPTS% %CRATE_PARAMS% %* -cp "%CRATE_CLASSPATH%" "io.crate.bootstrap.CrateF"
+set params='%*'
+
+for /F "usebackq tokens=* delims= " %%A in (!params!) do (
+    set param=%%A
+
+    if "!param:~0,5!" equ "-Des." (
+        echo "Support for defining Crate specific settings with the -D option and the es prefix has been dropped."
+        echo "Please use the -C option to configure Crate."
+        EXIT /B 1
+    )
+
+    if "x!newparams!" neq "x" (
+        set newparams=!newparams! !param!
+    ) else (
+        set newparams=!param!
+    )
+)
+
+"%JAVA_HOME%\bin\java" %JAVA_OPTS% %CRATE_JAVA_OPTS% -cp "%CRATE_CLASSPATH%" "io.crate.bootstrap.CrateDB" %CRATE_PARAMS% !newparams!
 goto finally
-
 
 :err
 echo JAVA_HOME environment variable must be set!
