@@ -9,7 +9,13 @@ EOF
     exit 1
 fi
 
-CRATE_CLASSPATH=$CRATE_HOME/lib/crate-app-@version@.jar:$CRATE_HOME/lib/*
+for libname in $CRATE_HOME/lib/*.jar; do
+    if [ "x$CRATE_CLASSPATH" != "x" ]; then
+        CRATE_CLASSPATH=$CRATE_CLASSPATH:$libname
+    else
+        CRATE_CLASSPATH=$libname
+    fi
+done
 
 if [ "x$CRATE_MIN_MEM" = "x" ]; then
     CRATE_MIN_MEM=256m
@@ -38,9 +44,6 @@ if [ "x$CRATE_DIRECT_SIZE" != "x" ]; then
     JAVA_OPTS="$JAVA_OPTS -XX:MaxDirectMemorySize=${CRATE_DIRECT_SIZE}"
 fi
 
-# reduce the per-thread stack size
-JAVA_OPTS="$JAVA_OPTS -Xss256k"
-
 # set to headless, just in case
 JAVA_OPTS="$JAVA_OPTS -Djava.awt.headless=true"
 
@@ -49,24 +52,54 @@ if [ "x$CRATE_USE_IPV4" != "x" ]; then
   JAVA_OPTS="$JAVA_OPTS -Djava.net.preferIPv4Stack=true"
 fi
 
-JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
+## GC configuration
 JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC"
-
 JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
 JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
 
-# When running under Java 7
-# JAVA_OPTS="$JAVA_OPTS -XX:+UseCondCardMark"
-
 # GC logging options
-if [ "x$CRATE_USE_GC_LOGGING" != "x" ]; then
-  JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
-  JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
-  JAVA_OPTS="$JAVA_OPTS -XX:+PrintClassHistogram"
-  JAVA_OPTS="$JAVA_OPTS -XX:+PrintTenuringDistribution"
-  JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCApplicationStoppedTime"
-  JAVA_OPTS="$JAVA_OPTS -Xloggc:/var/log/crate/gc.log"
+# Set CRATE_DISABLE_GC_LOGGING=1 to disable GC logging
+if [ "x$CRATE_DISABLE_GC_LOGGING" = "x" ]; then
+  # GC log directory needs to be set explicitly by packages
+  # GC logging requires 16x64mb = 1g of free disk space
+  GC_LOG_DIR=${CRATE_GC_LOG_DIR:-"$CRATE_HOME/logs"};
+  GC_LOG_SIZE=${CRATE_GC_LOG_SIZE:-"64m"}
+  GC_LOG_FILES=${CRATE_GC_LOG_FILES:-"16"}
+
+  # Ensure that the directory for the log file exists: the JVM will not create it.
+  if (! test -d "$GC_LOG_DIR" || ! test -x "$GC_LOG_DIR"); then
+    cat >&2 << EOF
+ERROR: Garbage collection log directory '$GC_LOG_DIR' does not exist or is not accessible.
+EOF
+    exit 1
+  fi
+  LOGGC="$GC_LOG_DIR/gc.log"
+
+  if [ -x "$JAVA_HOME/bin/java" ]; then
+      JAVA="$JAVA_HOME/bin/java"
+  else
+      JAVA=java
+  fi
+  JAVA_OPTS="$JAVA_OPTS -Xlog:gc*,gc+age=trace,safepoint:file=${LOGGC}:utctime,pid,tags:filecount=${GC_LOG_FILES},filesize=${GC_LOG_SIZE}"
 fi
+
+# Disables explicit GC
+JAVA_OPTS="$JAVA_OPTS -XX:+DisableExplicitGC"
 
 # Ensure UTF-8 encoding by default (e.g. filenames)
 JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8"
+
+# Use our provided JNA always versus the system one
+JAVA_OPTS="$JAVA_OPTS -Djna.nosys=true"
+
+# log4j options
+JAVA_OPTS="$JAVA_OPTS -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Dlog4j.skipJansi=true"
+
+# Disable netty recycler
+JAVA_OPTS="$JAVA_OPTS -Dio.netty.recycler.maxCapacityPerThread=0"
+
+# Dump heap on OOM
+JAVA_OPTS="$JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError"
+if [ "x$CRATE_HEAP_DUMP_PATH" != "x" ]; then
+    JAVA_OPTS="$JAVA_OPTS -XX:HeapDumpPath=$CRATE_HEAP_DUMP_PATH"
+fi
